Fix navbar overlap issue by adjusting hero padding and constraining logo height

--- a/client/src/components/home/Hero.module.css
+++ b/client/src/components/home/Hero.module.css
@@ -37,7 +37,7 @@
     z-index: 1;
     text-align: center;
     color: var(--color-white);
-    padding-top: 80px;
+    padding-top: 220px;
 }
 
 .title {
